src/tests/integration/snapshots/zellij__tests__integration__compatibility__exa_plus_omf_theme.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot_before_quit

---
.rw-r--r--  3.3k aram 11 Jan 16:09  CODE_OF_CONDUCT.md                                                                                                                                                                                     
.rw-r--r--  3.5k aram 17 Feb 16:06  CONTRIBUTING.md                                                                                                                                                                                        
drwxr-xr-x     - aram 10 Feb 11:53  default-tiles                                                                                                                                                                                          
drwxr-xr-x     - aram 10 Feb 11:53  docs                                                                                                                                                                                                   
.rw-r--r--  2.1k aram 10 Feb 11:53  GOVERNANCE.md                                                                                                                                                                                          
.rw-r--r--  1.1k aram 10 Feb 11:53  LICENSE.md                                                                                                                                                                                             
.rw-r--r--  4.7k aram 17 Feb 16:06  README.md                                                                                                                                                                                              
drwxr-xr-x     - aram 17 Feb 16:06  src                                                                                                                                                                                                    
drwxr-xr-x     - aram 17 Feb 16:08  target                                                                                                                                                                                                 
drwxr-xr-x     - aram 17 Feb 16:06  zellij-tile                                                                                                                                                                                            
⋊> ~/c/zellij on main ⨯ ll                                                                                  10:27:45                                                                                                                       
Permissions Size User Date Modified Name                                                                                                                                                                                                   
drwxr-xr-x     - aram 11 Feb 14:04  assets                                                                                                                                                                                                 
.rwxr-xr-x   596 aram 17 Feb 16:06  build-all.sh                                                                                                                                                                                           
.rw-r--r--  1.4k aram 17 Feb 16:06  build.rs                                                                                                                                                                                               
.rw-r--r--   56k aram 17 Feb 16:07  Cargo.lock                                                                                                                                                                                             
.rw-r--r--  2.1k aram 17 Feb 16:06  Cargo.toml                                                                                                                                                                                             
.rw-r--r--  3.3k aram 11 Jan 16:09  CODE_OF_CONDUCT.md                                                                                                                                                                                     
.rw-r--r--  3.5k aram 17 Feb 16:06  CONTRIBUTING.md                                                                                                                                                                                        
drwxr-xr-x     - aram 10 Feb 11:53  default-tiles                                                                                                                                                                                          
drwxr-xr-x     - aram 10 Feb 11:53  docs                                                                                                                                                                                                   
.rw-r--r--  2.1k aram 10 Feb 11:53  GOVERNANCE.md                                                                                                                                                                                          
.rw-r--r--  1.1k aram 10 Feb 11:53  LICENSE.md                                                                                                                                                                                             
.rw-r--r--  4.7k aram 17 Feb 16:06  README.md                                                                                                                                                                                              
drwxr-xr-x     - aram 17 Feb 16:06  src                                                                                                                                                                                                    
drwxr-xr-x     - aram 17 Feb 16:08  target                                                                                                                                                                                                 
drwxr-xr-x     - aram 17 Feb 16:06  zellij-tile                                                                                                                                                                                            
⋊> ~/c/zellij on main ⨯ omf theme                                                                           10:27:45                                                                                                                       
Installed:                                                                                                                                                                                                                                 
agnoster        chain           default         plain                                                                                                                                                                                      
                                                                                                                                                                                                                                           
Available:                                                                                                                                                                                                                                 
agnoster                eden                    lavender                scorphish                                                                                                                                                          
aight                   emoji-powerline         lolfish                 separation                                                                                                                                                         
ays                     es                      mars                    shellder                                                                                                                                                           
batman                  fishbone                mish                    simple-ass-prompt                                                                                                                                                  
beloglazov              fishface                mokou                   simplevi                                                                                                                                                           
bira                    fishy-drupal            mtahmed                 slavic-cat                                                                                                                                                         
bobthefish              fisk                    nai                     spacefish                                                                                                                                                          
bongnoster              fox                     nelsonjchen             sushi                                                                                                                                                              
boxfish                 gentoo                  neolambda               syl20bnr                                                                                                                                                           
budspencer              gianu                   numist                  taktoa                                                                                                                                                             
cbjohnson               gitstatus               ocean                   technopagan                                                                                                                                                        
chain                   gnuykeaj                one                     toaster                                                                                                                                                            
clearance               godfather               pastfish                tomita                                                                                                                                                             
cmorrell                graystatus              perryh                  trout                                                                                                                                                              
coffeeandcode           harleen                 plain                   tweetjay                                                                                                                                                           
cor                     idan                    pure                    uggedal                                                                                                                                                            
cyan                    integral                pygmalion               will                                                                                                                                                               
dangerous               jacaetevha              random                  wolf-theme                                                                                                                                                         
default                 johanson                randomrussel            yimmy                                                                                                                                                              
dmorrell                kawasaki                redfish                 zeit                                                                                                                                                               
doughsay                krisleech               red-snapper             zephyr                                                                                                                                                             
eclm                    l                       robbyrussell            zish                                                                                                                                                               
edan                    lambda                  sashimi                                                                                                                                                                                    
⋊> ~/c/zellij on main ⨯ █                                                                                   10:27:46                                                                                                                       
